@@ -1,5 +1,6 @@
 Version 3.9.27
 - Fixed a name conflict in some old style C function declarations
+- Added CAST operator to BASIC
 
 Version 3.9.26
 - Added DEF FNA(X)=X form to BASIC
